--- a/approval-client/src/components/application.table/application.table.css
+++ b/approval-client/src/components/application.table/application.table.css
@@ -5,10 +5,10 @@ h2 {
 }
 
 table {
-    width: 20%;
-    padding: 1%;
+    width: 30%;
+    padding: 14%;
 }
 
 th {
-    text-align: left;
+    text-align: center;
 }
